AI now use precomputed paths. (Buggy in elimination)